# EvoPolicyGym

./: .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SPEC.md  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml
agents/pd_pendulum/: policy.py
config/: codex.toml  main-128-claude-suite.toml  main-128-codex-suite.toml  main-128-kimi-suite.toml  smoke-8-suite.toml
docs/: README.md  architecture-map.md  architecture.md  automation-plan.md  codex-harness.md  design.html  dogfood.md  envs.md  findings.md  hl-model.md  intro.md  output.md  quickstart.md  real-codex-smoke.md  research-plan.md  reward-design.md  roadmap.md  submit-protocol.md  task-suite.md
docs/agent_protocol/: no_rollback_loop.md  workspace_layout.md
docs/benchmark/: environment_roadmap.md  evaluation_protocol.md  metrics.md  visibility_boundary.md
docs/blog/: evaluating-agents-as-policy-optimizers.md
docs/code/: README.md  architecture.md  experiments-and-visualization.md  failure-and-scoring.md  glossary.md  migration-plan.md  open-questions.md  requirements.md  scenario-validation.md  schema-design.md  task-contract.md  visibility-and-data-boundary.md
docs/deprecated/: README.md  automation-plan.md  system-design.md  training-plan.md
docs/design/: agent.md  case.md  env.md
docs/environment_protocol/: gymnasium_adapter.md
docs/envs/: core_suite.md  discovered.json  env_list.md  overview.md  roadmap.md
docs/examples/: cartpole-codex-suite.toml  cartpole-codex.toml  core-16-codex-suite.toml  core-16-suite.toml
docs/hlbench/: README.md
docs/hlbench/agent_protocol/: no_rollback_loop.md  workspace_layout.md
docs/hlbench/benchmark/: complexity.md  evaluation_protocol.md  metrics.md  visibility_boundary.md
docs/hlbench/concept/: problem_formulation.md
docs/hlbench/environment_protocol/: gymnasium_adapter.md
docs/protocol/: 01-overview.md  02-policy.md  03-resources.md  04-feedback.md  05-submit-lifecycle.md  06-seeds-sandbox.md  07-scoring.md  08-artifacts.md  09-versioning.md  README.md  schema.md
environments/: README.md
environments/balatro/: README.md  pyproject.toml
environments/balatro/scripts/: export_replay.py
environments/balatro/src/balatro/: __init__.py  actions.py  baseline.py  benchmark.py  environment.py  observation.py  rules.py
environments/balatro/src/balatro/programs/baseline/: policy.py
environments/balatro/tests/: test_balatro.py
environments/cartpole/: README.md  pyproject.toml
environments/cartpole/src/cartpole/: __init__.py  baseline.py  benchmark.py  environment.py
environments/cartpole/src/cartpole/programs/baseline/: policy.py
environments/cartpole/tests/: test_cartpole.py
hlbench/core/: complexity.py  paths.py  scenario.py  scenario_cli.py  seeds.py  task.py
hlbench/envs/: gymnasium_backend.py  registry.py  space_schema.py
hlbench/harness/: epoch_runner.py  reward.py
hlbench/harness/agents/: config.py
hlbench/reports/: __init__.py  builder.py
hlbench/rollout/: summarize.py
hlbench/scenarios/acrobot_swingup/: README.md  scenario.json  task_spec.md
hlbench/scenarios/half_cheetah/: policy.py  task_spec.md
hlbench/scenarios/hopper/: policy.py  task_spec.md
hlbench/scenarios/inverted_pendulum/: README.md  task_spec.md
hlbench/scenarios/lunar_lander/: README.md
hlbench/scenarios/lunar_lander_continuous/: README.md  policy.py  scenario.json
hlbench/scenarios/minigrid_doorkey_16x16/: README.md
hlbench/scenarios/minigrid_keycorridor_s6r3/: README.md
hlbench/scenarios/minigrid_lavacrossing_s11n5/: scenario.json
hlbench/scenarios/minigrid_obstructedmaze_2dlhb/: task_spec.md
hlbench/scenarios/mountain_car/: README.md  policy.py  scenario.json
hlbench/scenarios/pendulum_swingup/: scenario.json  task_spec.md
hlbench/workspace/: create.py  feedback.py
hlbench_cli/: __init__.py  main.py
hlbench_harness/: __init__.py  __main__.py  agent_log.py  claude_agent.py  prompts.py  runner.py  state.py
paper/: README.md  paper-v0.md  table.md
scripts/: aggregate_runs.py  build_showcase_site.py  calibration.py  collect_html_reports.sh  configure_claude_minimax.sh  gen_seeds.py  record_showcase_reruns.py  run_agent_matrix.sh  run_balatro_codex.py  run_bench.sh  run_cartpole_codex.py  run_claude_matrix.sh  run_codex_matrix.sh  run_codex_mountaincar_32.sh  run_kimi_matrix.sh  run_matrix.py  run_minimax_matrix.sh  run_v1_paper_matrix.sh  run_v1_paper_matrix_codex.sh  run_v1_paper_matrix_kimi.sh  setup-env.sh
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/src/: content.config.ts
src/evopolicygym/: README.md  __init__.py  _version.py  artifacts.py  benchmark.py  cli.py  config.py  data.py  errors.py  layout.py  metric.py  policy.py  program.py  results.py  suite.py
src/hlbench/: __init__.py  __main__.py  http_server.py
src/hlbench_cli/: main.py
src/hlbench_harness/: __init__.py  __main__.py  codex_agent.py  kimi_agent.py  prompts.py
src/hlbench_legacy/: __init__.py
tests/: __init__.py  conftest.py  test_agent.py  test_agent_runner.py  test_check.py  test_check_env.py  test_cli.py  test_codex_integration.py  test_config.py  test_data.py  test_discover.py  test_drive.py  test_e2e.py  test_env_runner.py  test_env_runner_edges.py  test_envs.py  test_filestore.py  test_filesystem_publication.py  test_gym_category_envs.py  test_gym_env.py  test_gym_space.py  test_hardcore_envs.py  test_harness_agent_log.py  test_harness_claude_agent.py  test_harness_codex_agent.py  test_harness_kimi_agent.py  test_harness_log.py  test_harness_prompts.py  test_harness_runner.py  test_harness_state.py  test_host.py  test_http.py  test_http_server.py  test_judge.py  test_manifest.py  test_metric.py  test_online_algo_envs.py  test_package_architecture.py  test_program_evolution.py  test_protocol.py  (+16 more)
web/: index.html  protocol-design.html
web/assets/: app.js  protocol-design.css  protocol-design.js  styles.css
web/data/: showcase-data.js
(+433 files in other folders)
