[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hlbench"
version = "0.1.0a1"
description = "Benchmark for evaluating coding agents on iterative policy synthesis under tight rollout budgets"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.26",
    "gymnasium[box2d]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
]
mujoco = [
    "mujoco>=3.1",
    "gymnasium[mujoco]>=0.29",
]

[project.scripts]
hlbench = "hlbench_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hlbench*", "hlbench_cli*", "hlbench_harness*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"hlbench.envs.pendulum" = ["*.md", "starter_policy.py", "data/*.json"]
"hlbench.envs.acrobot" = ["*.md", "starter_policy.py", "data/*.json"]
"hlbench.envs.mountain_car_continuous" = ["*.md", "starter_policy.py", "data/*.json"]
"hlbench.envs.bipedal_walker" = ["*.md", "starter_policy.py", "data/*.json"]
"hlbench.envs.lunar_lander_continuous" = ["*.md", "starter_policy.py", "data/*.json"]
"hlbench.envs.pendulum_hardcore" = ["*.md", "starter_policy.py", "data/*.json"]
"hlbench.envs.lunar_hardcore" = ["*.md", "starter_policy.py", "data/*.json"]
"hlbench.envs.bipedal_hardcore" = ["*.md", "starter_policy.py", "data/*.json"]
"hlbench.envs.cache_replacement" = ["*.md", "starter_policy.py", "data/*.json"]
"hlbench.envs.k_server" = ["*.md", "starter_policy.py", "data/*.json"]
"hlbench.envs.online_bipartite_matching" = ["*.md", "starter_policy.py", "data/*.json"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    # Treat warnings as errors by default so latent issues surface in CI.
    "error",
    # Suppression below: multiprocessing(spawn) leaks an internal socket
    # pair from get_preparation_data() at child startup. The leak is in
    # CPython's stdlib (multiprocessing/spawn.py) and is benign — the
    # process exits anyway. We use spawn extensively in tests (Sandbox,
    # HTTP server tests that spawn sandboxes inside policies), so we
    # whitelist this exact warning rather than disable -W error.
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line-length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
