[project]
name = "evopolicygym-benchmark-balatro"
version = "0.2.0"
description = "An unofficial Balatro Benchmark distribution for EvoPolicyGym, powered by Jackdaw."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [{ name = "EvoPolicyGym contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "evopolicygym==0.3.*",
    "jackdaw==0.1.0",
]

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "mypy==2.3.0",
    "ruff>=0.12.0",
]

[tool.uv]
required-version = "==0.11.16"

[tool.uv.sources]
evopolicygym = { path = "../..", editable = true }
jackdaw = { path = "vendor/jackdaw" }

[tool.hatch.build.targets.wheel]
packages = ["src/balatro"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/src",
    "/tests",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
warn_unused_configs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["jackdaw.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
