[project]
name = "evopolicygym-benchmark-cartpole"
version = "0.1.0"
description = "The CartPole-v1 Benchmark distribution for EvoPolicyGym."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [{ name = "EvoPolicyGym contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "evopolicygym==0.3.*",
    "gymnasium>=1.2.2,<2",
]

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "mypy==2.3.0",
    "ruff>=0.12.0",
]

[tool.uv]
required-version = "==0.11.16"

[tool.uv.sources]
evopolicygym = { path = "../..", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/cartpole"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/src",
    "/tests",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
]

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
warn_unused_configs = true
files = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
